--- a/monument-art-store/clientApp/src/app/components/users/users.component.css
+++ b/monument-art-store/clientApp/src/app/components/users/users.component.css
@@ -1,13 +1,13 @@
 .card  {
     transition: transform .1s, filter .1s ease-in-out;
     filter: scale(100%);
-    max-height: 358px;
-    height: 358px;
+    /* max-height: 370px;
+    height: 370px; */
 }
   
 .card:hover {
     filter: scale(0);
-    transform: scale(1.05);
+    transform: scale(1.01);
     border-color: #03a9f4;
     cursor: pointer;
 }
@@ -31,6 +31,10 @@
 }
 
 .card > img {
-    max-height: 170px;
-    height: 170px;
+    max-height: 250px;
+    height: 250px;
+}
+
+.text-red {
+    color: red;
 }
