--- a/monument-art-store/clientApp/src/app/components/login/login.component.html
+++ b/monument-art-store/clientApp/src/app/components/login/login.component.html
@@ -98,9 +98,9 @@
                         </button>
                     </form>
                 </div>
-                <div class="card-footer text-center">
+                <!-- <div class="card-footer text-center">
                    <cite class="form-text">New to Monument Art Store ? &nbsp;<a class="registerA" routerLink="/register">Sign up</a></cite>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
