refactor : change login button to block

--- a/monument-art-store/clientApp/src/app/components/login/login.component.html
+++ b/monument-art-store/clientApp/src/app/components/login/login.component.html
@@ -92,7 +92,7 @@
                         </div>
                         <button 
                             [disabled]="loginForm.invalid" 
-                            class="btn btn-outline-light loginBtn mt-4"
+                            class="btn btn-outline-light btn-block btn-lg loginBtn mt-4"
                         >
                             <strong>Login</strong>
                         </button>
