change user list grid

--- a/monument-art-store/clientApp/src/app/app.component.html
+++ b/monument-art-store/clientApp/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar *ngIf="currentUser"></app-navbar>
-<div class="container" *ngIf="currentUser">
+<div class="container-fluid" *ngIf="currentUser">
     <div class="row mt-4">
         <div class="col-md-12">
             <router-outlet></router-outlet>
