refactor : reset form in update and create user and refresh selected user info in update

--- a/monument-art-store/clientApp/src/app/components/users/modal/modal.component.html
+++ b/monument-art-store/clientApp/src/app/components/users/modal/modal.component.html
@@ -12,7 +12,7 @@
       </ng-container>
       <ng-template #updateTitleDiv>
         <div class="modal-header">
-          <h3 class="modal-title">Update User: <u>{{ selectedUser.name }}</u></h3>
+          <h3 class="modal-title">Update User</h3>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
           </button>
