--- a/monument-art-store/clientApp/src/app/components/users/users.component.html
+++ b/monument-art-store/clientApp/src/app/components/users/users.component.html
@@ -35,6 +35,7 @@
                         role="button" 
                         class="card-link text-red"
                         (click)="deleteUser(user._id)"
+                        *ngIf="user.role.id !== 1"
                     >
                         <i class="fa fa-trash"></i> Delete
                     </a>
