--- a/monument-art-store/clientApp/src/app/components/arts/arts.component.html
+++ b/monument-art-store/clientApp/src/app/components/arts/arts.component.html
@@ -1,1 +1,28 @@
-<p>arts works</p>
+<div class="container-fluid">
+    <div class="row my-3">
+        <div class="col-md-4">
+            <img src="https://images.pexels.com/photos/2976370/pexels-photo-2976370.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Norway"/>
+            <div class="bottom-left">Bottom Left</div>
+            <div class="top-left">Top Left</div>
+            <div class="top-right">Top Right</div>
+            <div class="bottom-right">Bottom Right</div>
+            <div class="centered">Centered</div>
+        </div>
+        <div class="col-md-4">
+            <img src="https://images.pexels.com/photos/2976370/pexels-photo-2976370.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Norway"/>
+            <div class="bottom-left">Bottom Left</div>
+            <div class="top-left">Top Left</div>
+            <div class="top-right">Top Right</div>
+            <div class="bottom-right">Bottom Right</div>
+            <div class="centered">Centered</div>
+        </div>
+        <div class="col-md-4">
+            <img src="https://images.pexels.com/photos/2976370/pexels-photo-2976370.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Norway"/>
+            <div class="bottom-left">Bottom Left</div>
+            <div class="top-left">Top Left</div>
+            <div class="top-right">Top Right</div>
+            <div class="bottom-right">Bottom Right</div>
+            <div class="centered">Centered</div>
+        </div>
+    </div>
+</div>
